--- a/Source/Chloroplast/Chloroplast_Sample/Templates/Meadow.cshtml
+++ b/Source/Chloroplast/Chloroplast_Sample/Templates/Meadow.cshtml
@@ -1,5 +1,5 @@
-﻿@/Page=SiteFrame
+﻿
+<h1>Meadow!</h1>
 
-Meadow!
-
-{content}
+    <h2>@Model.GetMeta("Title")</h2>
+    <div>@Raw(Model.Body)</div>
