--- a/docs/templates/SiteFrame.cshtml
+++ b/docs/templates/SiteFrame.cshtml
@@ -4,15 +4,48 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@Model.GetMeta("Title")</title>
-    <link href="/assets/main.css" rel="stylesheet" />
+    <!--<link href="/assets/main.css" rel="stylesheet" />-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <style type="text/css">
+        pre {
+            white-space: pre-wrap;
+            background-color: lightgray;
+            padding: 5px;
+            border-radius: 5px;
+            border: 1px solid black;
+        }
+        #leftnav
+        {
+            max-width:225px
+        }
+
+        @@media (max-width:992px){
+            #leftnav {
+                max-width:100%
+            }
+        }
+    </style>
 </head>
 <body>
-    <h1><a href="/">Chloroplast Docs</a></h1>
-    <div class="maincontent">
+    <header class="p-3 bg-dark text-white">
+        <div class="container">
+            <h1><a href="/" class="text-white" style="text-decoration:none">Chloroplast Docs</a></h1>
+        </div>
+    </header>
+
     @Raw(Model.Body)
-    </div>
-    <div id="footer">
-        Made with ♥ at <a href="https://wildernesslabs.co">wildernesslabs.co</a>
+
+    <div class="container">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+        <li class="nav-item"><a href="/" class="nav-link px-2 text-muted">Home</a></li>
+        <li class="nav-item"><a href="https://github.com/WildernessLabs/Chloroplast" class="nav-link px-2 text-muted">Github</a></li>
+        <li class="nav-item"><a href="https://www.wildernesslabs.co/" class="nav-link px-2 text-muted">Wilderness Labs</a></li>
+        <li class="nav-item"><a href="https://community.wildernesslabs.co/" class="nav-link px-2 text-muted">Community</a></li>
+        <li class="nav-item"><a href="https://blog.wildernesslabs.co/" class="nav-link px-2 text-muted">Blog</a></li>
+        </ul>
+        <footer class="py-3 my-4">
+            <p class="text-center text-muted">Made with ♥ at <a href="https://wildernesslabs.co">wildernesslabs.co</a></p>
+        </footer>
     </div>
 </body>
 </html>
