--- a/docs/templates/SiteFrame.cshtml
+++ b/docs/templates/SiteFrame.cshtml
@@ -38,7 +38,7 @@
     <div class="container">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
         <li class="nav-item"><a href="/" class="nav-link px-2 text-muted">Home</a></li>
-        <li class="nav-item"><a href="https://github.com/WildernessLabs/Chloroplast" class="nav-link px-2 text-muted">Github</a></li>
+        <li class="nav-item"><a href="https://github.com/WildernessLabs/Chloroplast" class="nav-link px-2 text-muted">GitHub</a></li>
         <li class="nav-item"><a href="https://www.wildernesslabs.co/" class="nav-link px-2 text-muted">Wilderness Labs</a></li>
         <li class="nav-item"><a href="https://community.wildernesslabs.co/" class="nav-link px-2 text-muted">Community</a></li>
         <li class="nav-item"><a href="https://blog.wildernesslabs.co/" class="nav-link px-2 text-muted">Blog</a></li>
