--- a/docs/templates/SiteFrame.cshtml
+++ b/docs/templates/SiteFrame.cshtml
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@Model.GetMeta("Title")</title>
-    <!--<link href="@WithVersion("/assets/main.css")" rel="stylesheet" />-->
+    <!--<link href="@Asset("/assets/main.css")" rel="stylesheet" />-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <style type="text/css">
         pre {
@@ -30,7 +30,7 @@
 <body>
     <header class="p-3 bg-dark text-white">
         <div class="container">
-            <h1><a href="/" class="text-white" style="text-decoration:none">Chloroplast Docs</a></h1>
+            <h1><a href="@Href("/")" class="text-white" style="text-decoration:none">Chloroplast Docs</a></h1>
         </div>
     </header>
 
@@ -38,7 +38,7 @@
 
     <div class="container">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-        <li class="nav-item"><a href="/" class="nav-link px-2 text-muted">Home</a></li>
+    <li class="nav-item"><a href="@Href("/")" class="nav-link px-2 text-muted">Home</a></li>
         <li class="nav-item"><a href="https://github.com/WildernessLabs/Chloroplast" class="nav-link px-2 text-muted">GitHub</a></li>
         <li class="nav-item"><a href="https://www.wildernesslabs.co/" class="nav-link px-2 text-muted">Wilderness Labs</a></li>
         <li class="nav-item"><a href="https://community.wildernesslabs.co/" class="nav-link px-2 text-muted">Community</a></li>
@@ -50,6 +50,6 @@
     </div>
 
     <!-- Example of how to include local scripts with cache busting -->
-    <!--<script src="@WithVersion("/assets/site.js")" type="text/javascript"></script>-->
+    <!--<script src="@Asset("/assets/site.js")" type="text/javascript"></script>-->
 </body>
 </html>
