--- a/docs/templates/menu.cshtml
+++ b/docs/templates/menu.cshtml
@@ -2,8 +2,9 @@
 @using System.Collections.Generic;
 @using Microsoft.Extensions.Configuration;
 @using Chloroplast.Core.Extensions;
+@using MiniRazor;
 @{
-    string RenderNodes(IConfigurationSection section)
+    RawString RenderNodes(IConfigurationSection section)
     {
         var children = section.GetChildren();
         if (children.Any())
@@ -12,16 +13,16 @@
             @foreach(var item in children)
             {
                 <li class="nav-item">
-                    <a href="/@item["path"]" class="nav-link link-light">@item["title"]</a>
+                    <a href="@Href("/" + item["path"])" class="nav-link link-light">@item["title"]</a>
                     @if (item.ContainsKey("items"))
                     {
-                        @Raw(RenderNodes(item.GetSection("items")))
+                        @RenderNodes(item.GetSection("items"))
                     }
                 </li>
             }
         </ul>
         }
-        return "";
+        return new RawString("");
     }
 }
 
