--- a/docs/templates/menu.cshtml
+++ b/docs/templates/menu.cshtml
@@ -1,3 +1,4 @@
+@inherits Chloroplast.Core.Rendering.ChloroplastTemplateBase<Chloroplast.Core.Rendering.RenderedContent>
 @using System.Linq;
 @using System.Collections.Generic;
 @using Microsoft.Extensions.Configuration;
