--- a/docs/templates/menu.cshtml
+++ b/docs/templates/menu.cshtml
@@ -1,4 +1,5 @@
 @inherits Chloroplast.Core.Rendering.ChloroplastTemplateBase<Chloroplast.Core.Rendering.RenderedContent>
+@using Chloroplast.Core
 @using System.Linq;
 @using System.Collections.Generic;
 @using Microsoft.Extensions.Configuration;
@@ -13,8 +14,10 @@
         <ul class="nav">
             @foreach(var item in children)
             {
+                var localizedPath = BuildMenuItemHref(item["path"]);
+                if (string.IsNullOrEmpty(localizedPath)) { continue; }
                 <li class="nav-item">
-                    <a href="@Href("/" + item["path"])" class="nav-link">@item["title"]</a>
+                    <a href="@localizedPath" class="nav-link">@item["title"]</a>
                     @if (item.ContainsKey("items"))
                     {
                         @RenderNodes(item.GetSection("items"))
@@ -26,6 +29,8 @@
         return new RawString("");
     }
 }
+
+@* NOTE: Localized menus can be provided via menu.<locale>.md files. Fallback to default menu.md handled in Default.cshtml *@
 
 <div id="leftnav">
     @RenderNodes(Model.Metadata.GetSection ("navTree"))
